# wallet-api-test

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 2026_02_27_0954-1c5977b368af_add_wallet_model.py  2026_03_02_2258-994e6937ad4f_add_operations_model.py
src/: main.py
src/app/: app.py
src/app/routers/: __init__.py
src/app/routers/api/: __init__.py  wallet.py
src/app/schemas/: __init__.py  operation.py  wallet.py
src/app/services/: wallet.py
src/core/: __init__.py  config.py  db_helper.py  logger.py
src/core/models/: __init__.py  base.py  operation.py  wallet.py
tests/: conftest.py  test_wallets_create.py  test_wallets_operations.py  utils.py
